tests/bindings/swift/phantom_protocolFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
int8_t uniffi_phantom_protocol_fn_method_acceptoutcome_has_early_data(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_method_acceptoutcome_session(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_protocol_fn_method_acceptoutcome_take_early_data(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_constructor_phantomlistener_bind(RustBuffer addr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomlistener_accept(uint64_t ptr
);
int8_t uniffi_phantom_protocol_fn_method_phantomlistener_is_shutting_down(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_protocol_fn_method_phantomlistener_local_addr(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_phantom_protocol_fn_method_phantomlistener_shutdown(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_protocol_fn_method_phantomlistener_verifying_key_bytes(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_constructor_phantomsession_connect(RustBuffer peer_addr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_protocol_fn_method_phantomsession_connection_state(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_current_epoch(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_disconnect(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_early_data_accepted(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_flush_queue(uint64_t ptr
);
RustBuffer uniffi_phantom_protocol_fn_method_phantomsession_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_phantom_protocol_fn_method_phantomsession_is_data_ready(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_phantom_protocol_fn_method_phantomsession_is_pqc_ready(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_open_stream(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_phantom_protocol_fn_method_phantomsession_peer_addr(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_queued_count(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_recv(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_resumption_hint(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_send(uint64_t ptr, RustBuffer data
);
uint64_t uniffi_phantom_protocol_fn_method_phantomsession_set_rekey_threshold(uint64_t ptr, uint64_t n
);
void uniffi_phantom_protocol_fn_free_phantomstream(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_method_phantomstream_disconnect(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomstream_recv(uint64_t ptr
);
uint64_t uniffi_phantom_protocol_fn_method_phantomstream_send_reliable(uint64_t ptr, RustBuffer data
);
uint64_t uniffi_phantom_protocol_fn_method_phantomstream_send_unreliable(uint64_t ptr, RustBuffer data
);
uint32_t uniffi_phantom_protocol_fn_method_phantomstream_stream_id(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_phantom_protocol_fn_func_connect_pinned(RustBuffer host, uint16_t port, RustBuffer pinned_key
);
uint64_t uniffi_phantom_protocol_fn_func_connect_pinned_with_resumption(RustBuffer host, uint16_t port, RustBuffer pinned_key, RustBuffer hint, RustBuffer early_data
);
uint16_t uniffi_phantom_protocol_checksum_func_connect_pinned(void
    
);
uint16_t uniffi_phantom_protocol_checksum_func_connect_pinned_with_resumption(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_acceptoutcome_has_early_data(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_acceptoutcome_session(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_acceptoutcome_take_early_data(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomlistener_accept(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomlistener_is_shutting_down(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomlistener_local_addr(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomlistener_shutdown(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomlistener_verifying_key_bytes(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_connection_state(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_current_epoch(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_disconnect(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_early_data_accepted(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_flush_queue(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_id(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_is_data_ready(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_is_pqc_ready(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_open_stream(void
    
);
uint16_t uniffi_phantom_protocol_checksum_constructor_phantomlistener_bind(void
    
);
uint16_t uniffi_phantom_protocol_checksum_constructor_phantomsession_connect(void
    
);
uint32_t ffi_phantom_protocol_uniffi_contract_version(void
    
);