tests/bindings/phantom_protocol.py

_UniffiLib.uniffi_phantom_protocol_fn_free_phantomstream.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_free_phantomstream.restype = None
_UniffiLib.uniffi_phantom_protocol_fn_func_connect_pinned.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint16,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_protocol_fn_func_connect_pinned.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_func_connect_pinned_with_resumption.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint16,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_protocol_fn_func_connect_pinned_with_resumption.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_acceptoutcome_has_early_data.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_acceptoutcome_has_early_data.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_protocol_fn_method_acceptoutcome_session.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_acceptoutcome_session.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_acceptoutcome_take_early_data.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_acceptoutcome_take_early_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_protocol_fn_constructor_phantomlistener_bind.argtypes = (
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_protocol_fn_constructor_phantomlistener_bind.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_accept.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_accept.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_is_shutting_down.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_is_shutting_down.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_local_addr.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_local_addr.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_shutdown.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_shutdown.restype = None
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_verifying_key_bytes.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomlistener_verifying_key_bytes.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_protocol_fn_constructor_phantomsession_connect.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_constructor_phantomsession_connect.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_connection_state.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_connection_state.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_current_epoch.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_current_epoch.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_disconnect.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_disconnect.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_early_data_accepted.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_early_data_accepted.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_flush_queue.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_flush_queue.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_is_data_ready.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_is_data_ready.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_is_pqc_ready.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_is_pqc_ready.restype = ctypes.c_int8
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_open_stream.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_open_stream.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_peer_addr.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_peer_addr.restype = _UniffiRustBuffer
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_queued_count.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_queued_count.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_recv.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_recv.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_resumption_hint.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_resumption_hint.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_send.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_send.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_set_rekey_threshold.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomsession_set_rekey_threshold.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_disconnect.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_disconnect.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_recv.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_recv.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_send_reliable.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_send_reliable.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_send_unreliable.argtypes = (
    ctypes.c_uint64,
    _UniffiRustBuffer,
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_send_unreliable.restype = ctypes.c_uint64
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_stream_id.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_phantom_protocol_fn_method_phantomstream_stream_id.restype = ctypes.c_uint32
_UniffiLib.ffi_phantom_protocol_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_phantom_protocol_uniffi_contract_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_phantom_protocol_checksum_func_connect_pinned.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_func_connect_pinned.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_func_connect_pinned_with_resumption.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_func_connect_pinned_with_resumption.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_acceptoutcome_has_early_data.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_acceptoutcome_has_early_data.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_acceptoutcome_session.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_acceptoutcome_session.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_acceptoutcome_take_early_data.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_acceptoutcome_take_early_data.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_constructor_phantomlistener_bind.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_constructor_phantomlistener_bind.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_accept.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_accept.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_is_shutting_down.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_is_shutting_down.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_local_addr.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_local_addr.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_shutdown.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_verifying_key_bytes.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomlistener_verifying_key_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_constructor_phantomsession_connect.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_constructor_phantomsession_connect.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_connection_state.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_connection_state.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_current_epoch.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_current_epoch.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_disconnect.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_disconnect.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_early_data_accepted.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_early_data_accepted.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_flush_queue.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_flush_queue.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_id.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_is_data_ready.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_is_data_ready.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_is_pqc_ready.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_is_pqc_ready.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_open_stream.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_open_stream.restype = ctypes.c_uint16
